# MAI-NUM-course

./: .gitignore  MAI-NUM-course.code-workspace  README.md  pyproject.toml
a-exercise1/: a_exercise1.ipynb
a-exercise2/: a_exercise2.ipynb  a_exercise2_alternative_explanation.md
a-exercise3/: a_exercise3.ipynb
a-exercise4/: a_exercise4.ipynb
a-exercise5/: a_exercise5.ipynb
a-exercise6/: a_exercise6.ipynb
b-exercise3/: b_exercise3.ipynb
b-exercise4/: b_exercise4.ipynb
b-exercise5/: b_exercise5.ipynb
b-exercise6/: b_exercise6.ipynb
